--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 asgiref
 Django
-django-environ==0.9.0
+django-environ
 sqlparse==0.4.2
 djangorestframework
 djangorestframework-simplejwt
@@ -17,3 +17,4 @@ gunicorn # for deployment purposes
 whitenoise
 django-password-validators
 dj-database-url
+django-cors-headers
